--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ jdk:
 script: "ant"
 env:
   global:
-  - build.number=1.$TRAVIS_BUILD_NUMBER
+  - BUILD_NUMBER=1.$TRAVIS_BUILD_NUMBER
 after_success:
   - BUILD_NUMBER=1.$TRAVIS_BUILD_NUMBER
   - BINTRAY_KEY=276298114650ddba4c0fa6da8e672d6999cbef3d
