--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: java
 jdk:
 - oraclejdk7
-script: "ant -DBUILD_NUMBER=1.$TRAVIS_BUILD_NUMBER"
+script: ant -DBUILD_NUMBER=1.$TRAVIS_BUILD_NUMBER
 env:
+  global:
+    secure: JUFcrRexSZCndh8ZGn1+tcCgYMCWvR7m3LmpojUtpAE1phO8/EeZA4IKsFd27DG+dNzHffrY5HiEL3VFACZrJE7kT7Fm1Hb1ExMdY9LYTJum1TkmtLExrdDI9wMF713F/AV5w/Ro0crL1jie323IQ28/NAxisVrkVvAAy+ZqX90=
 after_success:
-  - BUILD_NUMBER=1.$TRAVIS_BUILD_NUMBER
-  - BINTRAY_KEY=276298114650ddba4c0fa6da8e672d6999cbef3d
-  - curl -T build/artifacts/baron-greenback-$BUILD_NUMBER.jar -uspmiller:$BINTRAY_KEY https://api.bintray.com/content/sns/baron-greenback/baron-greenback/sky/sns/baron-greenback/baron-greenback/$BUILD_NUMBER/baron-greenback-$BUILD_NUMBER.jar?publish=1
+- BUILD_NUMBER=1.$TRAVIS_BUILD_NUMBER
+- curl -T build/artifacts/baron-greenback-$BUILD_NUMBER.jar -usns-deployer:$BINTRAY_KEY
+  https://api.bintray.com/content/sns/baron-greenback/baron-greenback/sky/sns/baron-greenback/baron-greenback/$BUILD_NUMBER/baron-greenback-$BUILD_NUMBER.jar?publish=1
