--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ env:
     secure: JUFcrRexSZCndh8ZGn1+tcCgYMCWvR7m3LmpojUtpAE1phO8/EeZA4IKsFd27DG+dNzHffrY5HiEL3VFACZrJE7kT7Fm1Hb1ExMdY9LYTJum1TkmtLExrdDI9wMF713F/AV5w/Ro0crL1jie323IQ28/NAxisVrkVvAAy+ZqX90=
 after_success:
 - BUILD_NUMBER=1.$TRAVIS_BUILD_NUMBER
-- curl -T build/artifacts/baron-greenback-$BUILD_NUMBER.jar -usns-deployer:$BINTRAY_KEY -H "X-Bintray-Package:baron-greenback" -H "X-Bintray-Version:$BUILD_NUMBER" https://api.bintray.com/content/sns/baron-greenback/sky/sns/baron-greenback?publish=1
+- curl -T build/artifacts/baron-greenback-$BUILD_NUMBER.jar -usns-deployer:$BINTRAY_KEY -H "X-Bintray-Package:baron-greenback" -H "X-Bintray-Version:$BUILD_NUMBER" https://api.bintray.com/content/sns/baron-greenback/sky/sns/baron-greenback/baron-greenback-$BUILD_NUMBER.jar?publish=1
