--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,7 @@ language: java
 jdk:
 - oraclejdk7
 script: ant -DBUILD_NUMBER=1.$TRAVIS_BUILD_NUMBER
-env:
-  global:
-    secure: JUFcrRexSZCndh8ZGn1+tcCgYMCWvR7m3LmpojUtpAE1phO8/EeZA4IKsFd27DG+dNzHffrY5HiEL3VFACZrJE7kT7Fm1Hb1ExMdY9LYTJum1TkmtLExrdDI9wMF713F/AV5w/Ro0crL1jie323IQ28/NAxisVrkVvAAy+ZqX90=
 after_success:
+- secure: JUFcrRexSZCndh8ZGn1+tcCgYMCWvR7m3LmpojUtpAE1phO8/EeZA4IKsFd27DG+dNzHffrY5HiEL3VFACZrJE7kT7Fm1Hb1ExMdY9LYTJum1TkmtLExrdDI9wMF713F/AV5w/Ro0crL1jie323IQ28/NAxisVrkVvAAy+ZqX90=
 - BUILD_NUMBER=1.$TRAVIS_BUILD_NUMBER
 - ./build/bintrayUpload.sh
