--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
 *~
 build/artifacts
 lib/*
+
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/dictionaries
+
+.idea/dataSources.ids
+.idea/dataSources.xml
+.idea/sqlDataSources.xml
+.idea/dynamic.xml
+.idea/uiDesigner.xml
+
+/out/
