--- a/.travis.yml
+++ b/.travis.yml
@@ -3,31 +3,29 @@ jdk:
 - oraclejdk7
 script: ant -DBUILD_NUMBER=$BUILD_NUMBER
 after_success: ./build/bintrayUpload.sh
-after_failure: grep -lEr "(</failure>)|(</error>)" ./build/artifacts/reports | xargs
-  cat
+after_failure: grep -lEr "(</failure>)|(</error>)" ./build/artifacts/reports | xargs cat
 env:
   global:
   - BUILD_NUMBER=1.$TRAVIS_BUILD_NUMBER
   - secure: JUFcrRexSZCndh8ZGn1+tcCgYMCWvR7m3LmpojUtpAE1phO8/EeZA4IKsFd27DG+dNzHffrY5HiEL3VFACZrJE7kT7Fm1Hb1ExMdY9LYTJum1TkmtLExrdDI9wMF713F/AV5w/Ro0crL1jie323IQ28/NAxisVrkVvAAy+ZqX90=
-  - secure: EYtUF0T1vaoOFeJcluvi3okjNfTQD94H+oS/x21csmxdXPAmePx7D3iym0UNSNy2CW+yBGGhIqPmNAS+Tx1PdqI6BqDeI3iKMG+/2exgwoCDG7PKy+YBI+Fr87/ui00hK5LcJ2AdC0vqk3TkEsR97ORD7IjzMJ9dau1K74/xo7k=
+  - secure: nrDZjXurrDlbihtPN0xX5nuXaZrom060dgLknCHntZaSNgR2JU7gZZi//G+NbSIJkClYuVZU8mSMCcInmBEsOSRYthm0cWrZgvwh+0ElDoPWxWpSYYThHTYSvI6KkiJ1TWVBLohKyDGI3JS9slqjiEKW7TpdbPmWchDC0UU4Kvg=
 before_deploy:
-  - git config --global user.email "builds@travis-ci.com"
-  - git config --global user.name "Travis CI"
-  - export GIT_TAG=$BUILD_NUMBER
-  - git tag $GIT_TAG -a -m "Generated tag from TravisCI for build $BUILD_NUMBER"
-  - git push -q https://$api_key@github.com/SNSOpenSource/baron-greenback --tags
+- git config --global user.email "builds@travis-ci.com"
+- git config --global user.name "Travis CI"
+- export GIT_TAG=$BUILD_NUMBER
+- git tag $GIT_TAG -a -m "Generated tag from TravisCI for build $BUILD_NUMBER"
+- git push -q https://$GITHUB_API_KEY@github.com/SNSOpenSource/baron-greenback --tags
 deploy:
   provider: releases
-  api_key: $api_key
-  file: 
-    - './build/artifacts/*.jar'
-    - './build/artifacts/*.pom.xml'
+  api_key: $GITHUB_API_KEY
+  file:
+  - ./build/artifacts/*.jar
+  - ./build/artifacts/*.pom.xml
   skip_cleanup: true
   on:
     repo: SNSOpenSource/baron-greenback
     tags: false
     all_branches: true
-
 branches:
   except:
-    - /^*-v[0-9]/
+  - /^*-v[0-9]/
