--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_deploy:
 deploy:
   provider: releases
   api_key: $GITHUB_API_KEY
+  file_glob: true
   file:
   - ./build/artifacts/*.jar
   - ./build/artifacts/*.pom.xml
@@ -26,6 +27,8 @@ deploy:
     repo: SNSOpenSource/baron-greenback
     tags: false
     all_branches: true
+
 branches:
+  # Don't build tags
   except:
-  - /^*-v[0-9]/
+  - /^[0-9].[0-9]*/
