--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ before_deploy:
 - git config --global user.email "builds@travis-ci.com"
 - git config --global user.name "Travis CI"
 - export GIT_TAG=$BUILD_NUMBER
-- git tag $GIT_TAG -a -m "Generated tag from TravisCI for build $BUILD_NUMBER"
-- git push -q https://$GITHUB_API_KEY@github.com/SNSOpenSource/baron-greenback --tags
+- git tag $GIT_TAG -a -m "Generated tag from TravisCI for build $BUILD_NUMBER" > /dev/null 2>&1
+- git push -q https://$GITHUB_API_KEY@github.com/$TRAVIS_REPO_SLUG --tags
 deploy:
   provider: releases
   api_key: $GITHUB_API_KEY
