--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: java
 jdk:
 - oraclejdk7
 script: ant -DBUILD_NUMBER=$BUILD_NUMBER
-after_success: ./build/bintrayUpload.sh
-after_failure: grep -lEr "(</failure>)|(</error>)" ./build/artifacts/reports | xargs cat
+after_success: "./build/bintrayUpload.sh"
+after_failure: grep -lEr "(</failure>)|(</error>)" ./build/artifacts/reports | xargs  cat
 env:
   global:
   - BUILD_NUMBER=1.$TRAVIS_BUILD_NUMBER
@@ -13,15 +13,17 @@ before_deploy:
 - git config --global user.email "builds@travis-ci.com"
 - git config --global user.name "Travis CI"
 - export GIT_TAG=$BUILD_NUMBER
-- git tag $GIT_TAG -a -m "Generated tag from TravisCI for build $BUILD_NUMBER" > /dev/null 2>&1
+- git tag $GIT_TAG -a -m "Generated tag from TravisCI for build $BUILD_NUMBER" > /dev/null
+  2>&1
 - git push -q https://$GITHUB_API_KEY@github.com/$TRAVIS_REPO_SLUG --tags
 deploy:
   provider: releases
-  api_key: $GITHUB_API_KEY
+  api_key:
+    secure: L+BbO5jp31X0DsPRUFaIRc0Zhu8uSfkN1tLM5+sL7wsdAZfIQu3KxooJHgEq+CIFFALoTvnHYblqlBX3PFpapQMHz3q9sjzvVrvplZaSwD/zBF6pKEVGyLY9fD5XrSQUDsmgOK0QfZr0sH9w8S2cvwiAkqFSmmo/vP+WIyQDzRs=
   file_glob: true
   file:
-  - ./build/artifacts/*.jar
-  - ./build/artifacts/*.pom.xml
+    - ./build/artifacts/*.jar
+    - ./build/artifacts/*.pom.xml
   skip_cleanup: true
   on:
     repo: SNSOpenSource/baron-greenback
